# mlflow-template

./: .env-sample  .gitignore  Mlproject  README.md  docker-compose.yaml  logging_config.json  pyproject.toml
docker/: basic_auth.ini
notebooks/: train.ipynb
notebooks/utils/: load_best_model.ipynb
src/: mock.py
src/libs/: data_utils.py  logger.py  mlflow_helper.py
src/libs/data_etl/: paths.py
src/libs/mlflow/: mlflow_helper.py  mlflow_project.py
src/pipelines/: project_runner.py
src/pipelines/data_etl/: load_data.py  split.py
src/pipelines/etl/: load_data.py  split.py
src/pipelines/feature_eng/: scale.py
src/pipelines/feature_engineering/: scale.py
src/pipelines/model_train/: train_autolog.py  train_hyperopt.py  train_manual.py  train_nested.py
src/pipelines/train/: train_autolog.py  train_hyperopt.py  train_manual.py  train_nested.py
